--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
     />
     <meta property="og:image" content="logo.jpg" />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://www.etsy.com/shop/rtsa3dprinted/?etsrc=sdt"
-    />
+    <meta property="og:url" content="https://rtsa3dprint.netlify.app" />
 
     <link rel="icon" type="image/jpeg" href="logo.jpg" />
 
